--- a/空のプロセス/.local/ProjectSettings.json
+++ b/空のプロセス/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"ブラウザを開く.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[]","ProjectBreakpoints":"{\"Value\":{}}"}
