--- a/空のプロセス1/.local/ProjectSettings.json
+++ b/空のプロセス1/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"ファイルの削除.xaml\",\"ファイルの存在を確認して削除.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"ファイルの存在を確認して削除.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
