--- a/ファイルの転記2/.local/ProjectSettings.json
+++ b/ファイルの転記2/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"フローチャート.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"ファイルの転記.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
