--- a/空のプロセス2/.local/ProjectSettings.json
+++ b/空のプロセス2/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[]"}
+{"OpenedDocuments":"[\"配列とリスト.xaml\",\"改良版　欠時数の転記.xaml\"]","ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}"}
