--- a/ゼミ課題　11月期/.local/ProjectSettings.json
+++ b/ゼミ課題　11月期/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"Main.xaml\",\"週の出席の転記.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"OpenedDocuments":"[\"週の出席の転記.xaml\",\"学籍番号と名前の転記.xaml\",\"全科目の転記.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
