--- a/ゼミ課題　11月期/.local/ProjectSettings.json
+++ b/ゼミ課題　11月期/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"学籍番号と名前の転記.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
+{"OpenedDocuments":"[\"連番作成.xaml\",\"週数の計算.xaml\",\"対象者のコピー.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
